--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -152,7 +152,7 @@ title: ""
         <span></span><span></span><span></span>
       </button>
 
-      <nav class="nav-links" id="navMenu" role="navigation" aria-label="Navegación principal" translate="no">
+      <nav class="nav-links" id="navMenu" role="navigation" aria-label="Navegación principal">
         <a href="/">{{ t_home }}</a>
 
         <!-- La casa (padre + caret + submenú) -->
@@ -166,7 +166,7 @@ title: ""
             <span translate="no" class="notranslate"><span class="chev" aria-hidden="true">▾</span></span>
           </button>
           <div class="submenu" id="submenu-casa" role="menu" aria-labelledby="link-casa">
-            <a href="/la-casa/" role="menuitem" class="parent-link only-mobile"><notranslate><strong>Ver “La casa”</strong></notranslate></a>
+            <a href="/la-casa/" role="menuitem" class="parent-link only-mobile"><strong>Ver “La casa”</strong></a>
             <a href="/la-casa/faq/" role="menuitem">Preguntas frecuentes</a>
             <a href="/la-casa/galeria/" role="menuitem">Galería</a>
             <a href="/la-casa/equipamiento/" role="menuitem">Equipamiento</a>
